--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,93 +11,64 @@
 
 		<RelativeLayout
 			android:id="@+id/page_homefragment_ek1"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			app:layout_constraintTop_toTopOf="parent"
+			android:layout_width="412dp"
+			android:layout_height="727dp"
 			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="0.516"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent">
-
-
-			<RelativeLayout android:id="@+id/home_background"
-				android:layout_marginTop="-376.5dp"
-				android:layout_marginStart="-240dp"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_marginLeft="-240dp"
-				tools:ignore="VisualLintBounds">
-
-				<ImageView
-					android:id="@+id/down"
-					android:src="@drawable/down"
-					android:contentDescription="down"
-					android:layout_marginStart="240dp"
-					android:layout_marginTop="700dp"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content" />
-
-				<ImageView
-					android:id="@+id/up"
-					android:src="@drawable/up"
-					android:contentDescription="up"
-					android:layout_marginStart="240dp"
-					android:layout_marginTop="375dp"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content" />
-
-			</RelativeLayout>
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintVertical_bias="0.498"
+			android:background="@drawable/HomeFragment">
 
 
 			<FrameLayout
 				android:id="@+id/send_report_layout"
-				android:layout_marginTop="306dp"
-				android:layout_marginStart="32dp"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				>
+				android:layout_marginStart="32dp"
+				android:layout_marginTop="306dp">
 
 				<ImageButton
 					android:id="@+id/send_report_btn"
-					android:src="@drawable/rectangle_6"
-					android:background="@null"
-					android:contentDescription="rectangle_6"
+					android:layout_width="120dp"
+					android:layout_height="160dp"
 					android:layout_marginStart="10dp"
 					android:layout_marginTop="0dp"
-					android:layout_width="120dp"
-					android:layout_height="160dp" />
+					android:background="@null"
+					android:contentDescription="rectangle_6"
+					android:src="@drawable/rectangle_6" />
 
 				<TextView
 					android:id="@+id/send_report"
-					android:textStyle="bold|italic"
-					android:textSize="20sp"
-					android:textColor="@color/send_report_color"
-					android:layout_marginLeft="20dp"
-					android:layout_marginTop="132dp"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
+					android:layout_marginLeft="20dp"
+					android:layout_marginTop="132dp"
 					android:text="@string/send_report_string"
-					/>
+					android:textColor="@color/send_report_color"
+					android:textSize="20sp"
+					android:textStyle="bold|italic" />
 
 			</FrameLayout>
 
 
 			<FrameLayout
 				android:id="@+id/manage_risk_layout"
-				android:layout_marginTop="318dp"
-				android:layout_marginStart="255dp"
 				android:layout_width="125dp"
 				android:layout_height="150dp"
-				>
+				android:layout_marginStart="255dp"
+				android:layout_marginTop="318dp">
 
 				<ImageButton
 					android:id="@+id/manage_risk_btn"
-					android:src="@drawable/rectangle_6_ek1"
-					android:background="@null"
-					android:contentDescription="rectangle_6_ek1"
+					android:layout_width="113dp"
+					android:layout_height="140dp"
 					android:layout_marginStart="0dp"
 					android:layout_marginTop="0dp"
-					android:layout_width="113dp"
-					android:layout_height="140dp"/>
+					android:background="@null"
+					android:contentDescription="rectangle_6_ek1"
+					android:src="@drawable/rectangle_6_ek1" />
 
 				<TextView
 					android:id="@+id/manage_risk"
@@ -115,24 +86,23 @@
 
 			<ImageView
 				android:id="@+id/rectangle_4"
-				android:src="@drawable/rectangle_4"
-				android:contentDescription="rectangle_4"
+				android:layout_width="122dp"
+				android:layout_height="133dp"
 				android:layout_marginStart="144dp"
 				android:layout_marginTop="200dp"
-				android:layout_width="122dp"
-				android:layout_height="133dp" />
+				android:contentDescription="rectangle_4"
+				android:src="@drawable/rectangle_4" />
 
 			<TextView
 				android:id="@+id/home"
-				android:textStyle="bold|italic"
-				android:textSize="70sp"
-				android:textColor="@color/teal_700"
-				android:layout_marginLeft="115dp"
-				android:layout_marginTop="125dp"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginLeft="115dp"
+				android:layout_marginTop="125dp"
 				android:text="@string/home_string"
-				/>
+				android:textColor="@color/login_color"
+				android:textSize="70sp"
+				android:textStyle="bold|italic" />
 
 		</RelativeLayout>
 
