--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,124 +8,87 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
 
-		<RelativeLayout android:id="@+id/page_loginfragment_ek1"
-			android:layout_marginTop="0dp"
-			android:layout_marginStart="0dp"
-			android:layout_marginLeft="0dp"
+		<RelativeLayout
+			android:id="@+id/page_loginfragment_ek1"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			app:layout_constraintTop_toTopOf="parent"
+			android:background="@drawable/LoginFragment"
 			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent">
-
-			<FrameLayout android:id="@+id/background"
-				android:layout_marginTop="0dp"
-				android:layout_marginStart="0dp"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_marginLeft="0dp">
-
-				<ImageView android:id="@+id/rectangle_2"
-					android:src="@drawable/rectangle_2"
-					android:contentDescription="rectangle_2"
-					android:layout_marginStart="0dp"
-					android:layout_marginTop="0dp"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content" />
-
-				<ImageView
-					android:id="@+id/rectangle_1"
-					android:src="@drawable/rectangle_1"
-					android:contentDescription="rectangle_1"
-					android:layout_marginStart="0dp"
-					android:layout_marginTop="0dp"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content" />
-
-				<ImageView
-					android:id="@+id/rectangle_3"
-					android:src="@drawable/rectangle_3"
-					android:contentDescription="rectangle_3"
-					android:layout_marginStart="0dp"
-					android:layout_marginTop="525dp"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"/>
-
-			</FrameLayout>
+			app:layout_constraintTop_toTopOf="parent">
 
 
-			<RelativeLayout android:id="@+id/login"
-				android:layout_marginTop="271dp"
-				android:layout_marginStart="27dp"
+			<RelativeLayout
+				android:id="@+id/login"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				>
+				android:layout_marginStart="27dp"
+				android:layout_marginTop="271dp">
 
-				<TextView android:id="@+id/loginTxt"
-					android:textStyle="bold"
-					android:textSize="36sp"
-					android:textColor="@color/login_ek1_color"
+				<TextView
+					android:id="@+id/loginTxt"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
 					android:layout_marginLeft="0dp"
 					android:layout_marginTop="0dp"
+					android:text="@string/login_ek1_string"
+					android:textColor="@color/login_ek1_color"
+					android:textSize="36sp"
+					android:textStyle="bold" />
+
+
+				<TextView
+					android:id="@+id/usernameTxt"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:text="@string/login_ek1_string"
-					/>
-
-
-				<TextView android:id="@+id/usernameTxt"
-					android:textSize="14sp"
-					android:textColor="@color/login_ek1_color"
 					android:layout_marginLeft="4dp"
 					android:layout_marginTop="77dp"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
 					android:text="Username:"
-					/>
+					android:textColor="@color/login_ek1_color"
+					android:textSize="14sp" />
 
 				<EditText
 					android:id="@+id/username_edTxt"
-					android:inputType="textPersonName"
-					android:hint="Enter you username"
-					android:ems="17"
 					android:layout_width="wrap_content"
 					android:layout_height="48dp"
 					android:layout_marginStart="0dp"
-					android:layout_marginTop="100dp" />
+					android:layout_marginTop="100dp"
+					android:ems="17"
+					android:hint="Enter you username"
+					android:inputType="textPersonName" />
 
-				<TextView android:id="@+id/passwordTxt"
-					android:textSize="14sp"
-					android:textColor="@color/login_ek1_color"
-					android:layout_marginLeft="4dp"
-					android:layout_marginTop="158dp"
+				<TextView
+					android:id="@+id/passwordTxt"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
+					android:layout_marginLeft="4dp"
+					android:layout_marginTop="158dp"
 					android:text="Password: "
-					/>
+					android:textColor="@color/login_ek1_color"
+					android:textSize="14sp" />
 
 				<EditText
 					android:id="@+id/password_edTxt"
-					android:inputType="textPassword"
-					android:hint="Enter your password"
-					android:ems="17"
 					android:layout_width="wrap_content"
 					android:layout_height="48dp"
 					android:layout_marginStart="0dp"
-					android:layout_marginTop="175dp" />
+					android:layout_marginTop="175dp"
+					android:ems="17"
+					android:hint="Enter your password"
+					android:inputType="textPassword" />
 
 			</RelativeLayout>
 
 			<Button
 				android:id="@+id/login_btn"
-				android:textSize="36sp"
-				android:textColor="@color/login_ek3_color"
-				android:layout_marginLeft="250dp"
-				android:layout_marginTop="500dp"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginLeft="250dp"
+				android:layout_marginTop="500dp"
 				android:text="Login"
-				/>
+				android:textColor="@color/login_ek3_color"
+				android:textSize="36sp" />
 
 		</RelativeLayout>
 
