--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -11,203 +11,178 @@
 
 		<RelativeLayout
 			android:id="@+id/page_reportfragment_ek1"
-			android:layout_marginTop="0dp"
-			android:layout_marginStart="0dp"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginLeft="0dp"
-			android:background="@drawable/_bg__reportfragment_ek2_shape"
-			app:layout_constraintTop_toTopOf="parent"
+			android:background="@drawable/ReportFragment"
 			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent">
+			app:layout_constraintTop_toTopOf="parent">
 
-
-			<ImageView
-				android:id="@+id/crack_1"
-				android:src="@drawable/crack_1"
-				android:contentDescription="crack_1"
-				android:layout_marginStart="0dp"
-				android:layout_marginTop="485dp"
-				android:layout_width="411dp"
-				android:layout_height="261dp" />
-
-			<ImageView
-				android:id="@+id/truck_1"
-				android:src="@drawable/truck_1"
-				android:contentDescription="truck_1"
-				android:layout_marginStart="25dp"
-				android:layout_marginTop="165dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content" />
 
 			<TextView
 				android:id="@+id/send_your_report"
-				android:textStyle="bold|italic"
-				android:textSize="36sp"
-				android:textColor="@color/send_your_report_color"
-				android:layout_marginLeft="63dp"
-				android:layout_marginTop="69dp"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginLeft="63dp"
+				android:layout_marginTop="69dp"
 				android:text="@string/send_your_report_string"
-				/>
+				android:textColor="@color/send_your_report_color"
+				android:textSize="36sp"
+				android:textStyle="bold|italic" />
 
 			<View
 				android:id="@+id/line_1"
-				android:background="@drawable/line_1_shape"
+				android:layout_width="411dp"
+				android:layout_height="1dp"
 				android:layout_marginStart="0dp"
 				android:layout_marginTop="159dp"
-				android:layout_width="411dp"
-				android:layout_height="1dp" />
+				android:background="@drawable/line_1_shape" />
 
 			<Button
 				android:id="@+id/rectangle_9"
-				android:background="@drawable/rectangle_9"
-				android:contentDescription="rectangle_9"
+				android:layout_width="168dp"
+				android:layout_height="152dp"
 				android:layout_marginStart="122dp"
 				android:layout_marginTop="183dp"
-				android:layout_width="168dp"
-				android:layout_height="152dp" />
+				android:background="@drawable/rectangle_9"
+				android:contentDescription="rectangle_9" />
 
-			<TextView android:id="@+id/upload_image"
-				android:textStyle="bold"
-				android:textSize="30sp"
-				android:textColor="@color/send_your_report_color"
+			<TextView
+				android:id="@+id/upload_image"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
 				android:layout_marginLeft="108dp"
 				android:layout_marginTop="319dp"
+				android:text="@string/upload_image_string"
+				android:textColor="@color/send_your_report_color"
+				android:textSize="30sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/type_of_hazard_"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="@string/upload_image_string"
-				/>
-
-			<TextView android:id="@+id/type_of_hazard_"
-				android:textStyle="bold"
-				android:textSize="14sp"
-				android:textColor="@color/send_your_report_color"
 				android:layout_marginLeft="24dp"
 				android:layout_marginTop="375dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
 				android:text="@string/type_of_hazard__string"
-				/>
+				android:textColor="@color/send_your_report_color"
+				android:textSize="14sp"
+				android:textStyle="bold" />
 
 			<EditText
 				android:id="@+id/hazard_edTxt"
-				android:inputType="text"
-				android:hint="Enter type of hazard"
-				android:ems="17"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginStart="23dp"
-				android:layout_marginTop="390dp" />
+				android:layout_marginTop="390dp"
+				android:ems="17"
+				android:hint="Enter type of hazard"
+				android:inputType="text" />
 
 			<TextView
 				android:id="@+id/description_"
-				android:textStyle="bold"
-				android:textSize="14sp"
-				android:textColor="@color/send_your_report_color"
-				android:layout_marginLeft="24dp"
-				android:layout_marginTop="441dp"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginLeft="24dp"
+				android:layout_marginTop="441dp"
 				android:text="@string/description__string"
-				/>
+				android:textColor="@color/send_your_report_color"
+				android:textSize="14sp"
+				android:textStyle="bold" />
 
 			<EditText
 				android:id="@+id/description_edTxt"
-				android:inputType="text"
-				android:hint="Enter description"
-				android:ems="17"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginStart="23dp"
-				android:layout_marginTop="460dp" />
+				android:layout_marginTop="460dp"
+				android:ems="17"
+				android:hint="Enter description"
+				android:inputType="text" />
 
-			<TextView android:id="@+id/severity_level_"
-				android:textStyle="bold"
-				android:textSize="14sp"
-				android:textColor="@color/send_your_report_color"
-				android:layout_marginLeft="23dp"
-				android:layout_marginTop="507dp"
+			<TextView
+				android:id="@+id/severity_level_"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginLeft="23dp"
+				android:layout_marginTop="507dp"
 				android:text="@string/severity_level__string"
-				/>
+				android:textColor="@color/send_your_report_color"
+				android:textSize="14sp"
+				android:textStyle="bold" />
 
 			<RadioGroup
 				android:id="@+id/radio_btn"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="540dp"
-				android:checkedButton="@id/low_btn"
-				>
+				android:checkedButton="@id/low_btn">
 
 				<RadioButton
 					android:id="@+id/low_btn"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginStart="30dp"
-					/>
+					android:layout_marginStart="30dp" />
 
 				<RadioButton
 					android:id="@+id/moderate_btn"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginStart="30dp"/>
+					android:layout_marginStart="30dp" />
 
 				<RadioButton
 					android:id="@+id/high_btn"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginStart="30dp"/>
+					android:layout_marginStart="30dp" />
 
 			</RadioGroup>
 
 
-			<TextView android:id="@+id/low"
-				android:textStyle="bold"
-				android:textSize="14sp"
-				android:textColor="@color/send_your_report_color"
-				android:layout_marginLeft="72dp"
-				android:layout_marginTop="546dp"
+			<TextView
+				android:id="@+id/low"
 				android:layout_width="49dp"
 				android:layout_height="31dp"
-				android:text="@string/low_string"
-				/>
-
-			<TextView android:id="@+id/moderate"
-				android:textStyle="bold"
-				android:textSize="14sp"
-				android:textColor="@color/send_your_report_color"
 				android:layout_marginLeft="72dp"
-				android:layout_marginTop="578dp"
+				android:layout_marginTop="546dp"
+				android:text="@string/low_string"
+				android:textColor="@color/send_your_report_color"
+				android:textSize="14sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/moderate"
 				android:layout_width="84dp"
 				android:layout_height="31dp"
-				android:text="@string/moderate_string"
-				/>
-
-			<TextView android:id="@+id/high"
-				android:textStyle="bold"
-				android:textSize="14sp"
-				android:textColor="@color/send_your_report_color"
 				android:layout_marginLeft="72dp"
-				android:layout_marginTop="610dp"
+				android:layout_marginTop="578dp"
+				android:text="@string/moderate_string"
+				android:textColor="@color/send_your_report_color"
+				android:textSize="14sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/high"
 				android:layout_width="53dp"
 				android:layout_height="31dp"
+				android:layout_marginLeft="72dp"
+				android:layout_marginTop="610dp"
 				android:text="@string/high_string"
-				/>
+				android:textColor="@color/send_your_report_color"
+				android:textSize="14sp"
+				android:textStyle="bold" />
 
 
-			<Button android:id="@+id/submitBtn"
-				android:textSize="36sp"
-				android:textColor="@color/login_color"
-				android:layout_marginLeft="125dp"
-				android:layout_marginTop="620dp"
+			<Button
+				android:id="@+id/submitBtn"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginLeft="125dp"
+				android:layout_marginTop="620dp"
 				android:text="@string/login_string"
-				/>
+				android:textColor="@color/login_color"
+				android:textSize="36sp" />
 
 
 		</RelativeLayout>
