--- a/app/src/main/res/layout/fragment_reportlist.xml
+++ b/app/src/main/res/layout/fragment_reportlist.xml
@@ -1,80 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	app:circularflow_radiusInDP="30"
 	tools:context=".ReportListFragment">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"
+		android:background="@drawable/ReportListFragment" >
 
-		<RelativeLayout android:id="@+id/page_reportlistfragment_ek1"
-			android:layout_marginTop="0dp"
-			android:layout_marginStart="0dp"
+		<View
+			android:id="@+id/line_2"
+			android:layout_width="350dp"
+			android:layout_height="2dp"
+			android:layout_marginStart="30dp"
+			android:layout_marginLeft="30dp"
+			android:layout_marginTop="168dp"
+			android:background="@drawable/line_1_shape"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="0.0"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent" />
+
+		<TextView
+			android:id="@+id/txtlist"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginLeft="0dp"
-			android:background="@drawable/rectangle_13_shape"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toBottomOf="parent"
+			android:layout_marginTop="92dp"
+			android:text="@string/risk_assessment_string"
+			android:textColor="#000000"
+			android:textSize="34sp"
 			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="0.496"
 			app:layout_constraintStart_toStartOf="parent"
-			>
-
-			<View
-				android:id="@+id/rectangle_12"
-				android:background="@drawable/rectangle_12_shape"
-				android:layout_marginStart="27dp"
-				android:layout_marginTop="34dp"
-				android:layout_width="363dp"
-				android:layout_height="761dp"
-				android:layout_marginLeft="27dp" />
-
-			<ImageView android:id="@+id/construction_1"
-				android:src="@drawable/construction_1"
-				android:contentDescription="construction_1"
-				android:layout_marginStart="27dp"
-				android:layout_marginTop="246dp"
-				android:layout_width="357dp"
-				android:layout_height="357dp" />
-
-			<TextView android:id="@+id/risk_assessment"
-				android:textStyle="bold|italic"
-				android:textSize="36sp"
-				android:textColor="@color/risk_assessment_color"
-				android:layout_marginLeft="62dp"
-				android:layout_marginTop="69dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/risk_assessment_string"
-				tools:ignore="VisualLintOverlap" />
-
-			<View
-				android:id="@+id/line_1"
-				android:background="@drawable/line_1_shape"
-				android:layout_marginStart="27dp"
-				android:layout_marginTop="159dp"
-				android:layout_width="357dp"
-				android:layout_height="1dp" />
-
-			<ImageView android:id="@+id/border"
-				android:src="@drawable/border"
-				android:contentDescription="border"
-				android:layout_marginStart="1dp"
-				android:layout_marginTop="4dp"
-				android:layout_width="408dp"
-				android:layout_height="815dp" />
-
-			<androidx.recyclerview.widget.RecyclerView
-				android:id="@+id/recyclerView1"
-				android:layout_marginTop="160dp"
-				android:layout_marginStart="50dp"
-				android:layout_width="310dp"
-				android:layout_height="500dp" />
-
-
-		</RelativeLayout>
-
+			app:layout_constraintTop_toTopOf="parent" />
 	</androidx.constraintlayout.widget.ConstraintLayout>
 
 
