--- a/app/src/main/res/layout/fragment_riskassessment.xml
+++ b/app/src/main/res/layout/fragment_riskassessment.xml
@@ -8,154 +8,129 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
 
-		<RelativeLayout android:id="@+id/page_riskassessmentfragment_ek1"
-			android:layout_marginTop="0dp"
-			android:layout_marginStart="0dp"
+		<RelativeLayout
+			android:id="@+id/page_riskassessmentfragment_ek1"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginLeft="0dp"
-			android:background="@drawable/_bg__riskassessmentfragment_ek2_shape"
-			app:layout_constraintStart_toStartOf="parent"
+			android:background="@drawable/RiskAssessmentFragment"
+			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toBottomOf="parent">
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent">
 
 
 			<ImageView
-				android:id="@+id/vector"
-				android:src="@drawable/vector"
-				android:contentDescription="vector"
-				android:layout_marginStart="0dp"
-				android:layout_marginTop="51dp"
+				android:id="@+id/vector_ek3"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				tools:ignore="VisualLintBounds" />
-
-			<ImageView android:id="@+id/vector_ek1"
-				android:src="@drawable/vector_ek1"
-				android:contentDescription="vector_ek1"
-				android:layout_marginStart="0dp"
-				android:layout_marginTop="675dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				tools:ignore="VisualLintBounds" />
-
-			<ImageView android:id="@+id/vector_ek2"
-				android:src="@drawable/vector_ek2"
-				android:contentDescription="vector_ek2"
-				android:layout_marginStart="0dp"
-				android:layout_marginTop="41.5dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content" />
-
-			<ImageView android:id="@+id/vector_ek3"
-				android:src="@drawable/vector_ek3"
-				android:contentDescription="vector_ek3"
 				android:layout_marginStart="0dp"
 				android:layout_marginTop="666dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content" />
+				android:contentDescription="vector_ek3"
+				android:src="@drawable/vector_ek3" />
 
-			<ImageView android:id="@+id/rectangle_8"
-				android:src="@drawable/rectangle_8"
-				android:contentDescription="rectangle_8"
-				android:layout_marginStart="86dp"
-				android:layout_marginTop="179dp"
+			<ImageView
+				android:id="@+id/rectangle_8"
 				android:layout_width="200dp"
-				android:layout_height="175dp" />
+				android:layout_height="175dp"
+				android:layout_below="@+id/report_1"
+				android:layout_marginStart="86dp"
+				android:layout_marginTop="50dp"
+				android:contentDescription="rectangle_8"
+				android:src="@drawable/rectangle_8" />
 
-			<TextView android:id="@+id/report_1"
-				android:textStyle="bold|italic"
-				android:textSize="36sp"
-				android:textColor="@color/report_1_color"
+			<TextView
+				android:id="@+id/report_1"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
 				android:layout_marginLeft="130dp"
 				android:layout_marginTop="69dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
 				android:text="@string/report_1_string"
-				/>
-
-			<TextView android:id="@+id/type_of_hazard_"
-				android:textStyle="bold"
-				android:textSize="20sp"
 				android:textColor="@color/report_1_color"
-				android:layout_marginLeft="33dp"
-				android:layout_marginTop="413dp"
+				android:textSize="36sp"
+				android:textStyle="bold|italic" />
+
+			<TextView
+				android:id="@+id/type_of_hazard_"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginLeft="33dp"
+				android:layout_marginTop="363dp"
 				android:text="@string/type_of_hazard__string"
-				/>
-
-			<TextView android:id="@+id/description_"
-				android:textStyle="bold"
-				android:textSize="20sp"
 				android:textColor="@color/report_1_color"
+				android:textSize="20sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/description_"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginLeft="33dp"
+				android:layout_marginTop="405dp"
+				android:text="@string/description__string"
+				android:textColor="@color/report_1_color"
+				android:textSize="20sp"
+				android:textStyle="bold" />
+
+			<TextView
+				android:id="@+id/severity_level_"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
 				android:layout_marginLeft="33dp"
 				android:layout_marginTop="455dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/description__string"
-				/>
-
-			<TextView android:id="@+id/severity_level_"
-				android:textStyle="bold"
-				android:textSize="20sp"
-				android:textColor="@color/report_1_color"
-				android:layout_marginLeft="33dp"
-				android:layout_marginTop="505dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
 				android:text="@string/severity_level__string"
-				/>
+				android:textColor="@color/report_1_color"
+				android:textSize="20sp"
+				android:textStyle="bold" />
 
 			<Switch
 				android:id="@+id/mark_as_complete_switch"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
 				android:layout_marginStart="90dp"
-				android:layout_marginTop="590dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content" />
+				android:layout_marginTop="490dp" />
 
-			<TextView android:id="@+id/mark_as_complete"
-				android:textStyle="bold"
-				android:textSize="20sp"
-				android:textColor="@color/report_1_color"
+			<TextView
+				android:id="@+id/mark_as_complete"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_below="@+id/severity_level_"
 				android:layout_marginLeft="141dp"
-				android:layout_marginTop="590dp"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
+				android:layout_marginTop="8dp"
 				android:text="@string/mark_as_complete_string"
-				/>
-
-			<Button android:id="@+id/rectangle_10"
-				android:background="@drawable/rectangle_10"
-				android:contentDescription="rectangle_10"
-				android:layout_marginStart="33dp"
-				android:layout_marginTop="383dp"
-				android:layout_width="25dp"
-				android:layout_height="23dp" />
-
-			<TextView android:id="@+id/edit"
-				android:textStyle="bold"
-				android:textSize="14sp"
 				android:textColor="@color/report_1_color"
-				android:layout_marginLeft="61dp"
-				android:layout_marginTop="387dp"
+				android:textSize="20sp"
+				android:textStyle="bold" />
+
+			<Button
+				android:id="@+id/rectangle_10"
+				android:layout_width="25dp"
+				android:layout_height="23dp"
+				android:layout_marginStart="33dp"
+				android:layout_marginTop="333dp"
+				android:background="@drawable/rectangle_10"
+				android:contentDescription="rectangle_10" />
+
+			<TextView
+				android:id="@+id/edit"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginLeft="61dp"
+				android:layout_marginTop="337dp"
 				android:text="@string/edit_string"
-				/>
+				android:textColor="@color/report_1_color"
+				android:textSize="14sp"
+				android:textStyle="bold" />
 
-				<Button
-					android:id="@+id/submit_btn"
-					android:textSize="36sp"
-					android:background="@color/white"
-					android:textColor="@color/login_color"
-					android:layout_marginLeft="145dp"
-					android:layout_marginTop="675dp"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="@string/login_string"
-					/>
+			<Button
+				android:id="@+id/submit_btn"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginLeft="145dp"
+				android:layout_marginTop="605dp"
+				android:background="@color/white"
+				android:text="@string/login_string"
+				android:textColor="@color/login_color"
+				android:textSize="36sp" />
 
 		</RelativeLayout>
 	</androidx.constraintlayout.widget.ConstraintLayout>
